--- a/resources/etherpad/postgres_deployment.yaml
+++ b/resources/etherpad/postgres_deployment.yaml
@@ -15,8 +15,7 @@ spec:
         name: postgresql
     spec:
       containers:
-      - capabilities: {}
-        env:
+      - env:
         - name: POSTGRESQL_USER
           valueFrom:
             secretKeyRef:
@@ -65,5 +64,4 @@ spec:
       restartPolicy: Always
       volumes:
       - name: postgresql-data
-        emptyDir:
-          medium: ""
+        emptyDir: {}
