--- a/resources/etherpad/etherpad_deployment.yaml
+++ b/resources/etherpad/etherpad_deployment.yaml
@@ -23,16 +23,8 @@ spec:
       - env:
         - name: DB_TYPE
           value: postgres
-        - name: DB_HOST
-          value: database-1.ceblquvck1ro.us-east-1.rds.amazonaws.com
-        - name: DB_PORT
-          value: "5432"
-        - name: DB_DATABASE
-          value: etherpad
-        - name: DB_USER
-          value: postgres
-        - name: DB_PASS
-          value: etherpad
+        - name: DB_URL
+          value: 'postgresql://postgres:etherpad@database-1.ceblquvck1ro.us-east-1.rds.amazonaws.com:5432/etherpad?sslmode=allow'
         - name: NODE_ENV
           value: production
         image: quay.io/gpte-devops-automation/etherpad:latest
