--- a/resources/etherpad/etherpad_deployment.yaml
+++ b/resources/etherpad/etherpad_deployment.yaml
@@ -26,15 +26,15 @@ spec:
         - name: DB_URL
           value: 'postgresql://postgres:etherpad@database-1.ceblquvck1ro.us-east-1.rds.amazonaws.com:5432/etherpad?sslmode=allow'
         - name: DB_HOST
-          value: database-1.ceblquvck1ro.us-east-1.rds.amazonaws.com
+          value: ''
         - name: DB_PORT
-          value: "5432"
+          value: ''
         - name: DB_DATABASE
-          value: etherpad
+          value: ''
         - name: DB_USER
-          value: postgres
+          value: ''
         - name: DB_PASS
-          value: etherpad
+          value: ''
         - name: NODE_ENV
           value: production
         image: quay.io/gpte-devops-automation/etherpad:latest
