--- a/resources/etherpad/etherpad_deployment.yaml
+++ b/resources/etherpad/etherpad_deployment.yaml
@@ -45,7 +45,8 @@ spec:
             set -eux &&
             cp config/settings.json . && 
             sed -i "s|DB_TYPE|${DB_TYPE}|" settings.json &&            
-            sed -i "s|DB_URL|${DB_URL}|" settings.json &&            
+            sed -i "s|DB_URL|${DB_URL}|" settings.json &&
+            cat settings.json &&
             ./src/bin/run.sh
         imagePullPolicy: Always
         name: etherpad
