--- a/resources/etherpad/etherpad_deployment.yaml
+++ b/resources/etherpad/etherpad_deployment.yaml
@@ -49,7 +49,7 @@ spec:
             sed -i '/DB_PORT/d' settings.json &&
             sed -i '/DB_DATABASE/d' settings.json &&
             sed -i '/DB_USER/d' settings.json &&
-            sed -i "s|.*DB_PASS-*| url: \"${DB_URL}\"|" settings.json &&
+            sed -i "s|.*DB_PASS.*| url: \"${DB_URL}\"|" settings.json &&
             cat settings.json &&
             ./src/bin/run.sh
         imagePullPolicy: Always
