--- a/resources/etherpad/etherpad_deployment.yaml
+++ b/resources/etherpad/etherpad_deployment.yaml
@@ -37,21 +37,21 @@ spec:
 #          value: ''
         - name: NODE_ENV
           value: production
-        image: quay.io/gpte-devops-automation/etherpad:latest
-        command: ["/bin/bash"]
-        args:
-          - '-c'
-          - >-
-            set -eux &&
-            cp config/settings.json . &&
-            sed -i "s|DB_TYPE|${DB_TYPE}|" settings.json &&            
-            sed -i '/DB_HOST/d' settings.json &&
-            sed -i '/DB_PORT/d' settings.json &&
-            sed -i '/DB_DATABASE/d' settings.json &&
-            sed -i '/DB_USER/d' settings.json &&
-            sed -i "s|.*DB_PASS.*| \"url\" : \"${DB_URL}\"|" settings.json &&
-            cat settings.json &&
-            ./src/bin/run.sh
+        image: etherpad/etherpad:latest
+#        command: ["/bin/bash"]
+#        args:
+#          - '-c'
+#          - >-
+#            set -eux &&
+#            cp config/settings.json . &&
+#            sed -i "s|DB_TYPE|${DB_TYPE}|" settings.json &&
+#            sed -i '/DB_HOST/d' settings.json &&
+#            sed -i '/DB_PORT/d' settings.json &&
+#            sed -i '/DB_DATABASE/d' settings.json &&
+#            sed -i '/DB_USER/d' settings.json &&
+#            sed -i "s|.*DB_PASS.*| \"url\" : \"${DB_URL}\"|" settings.json &&
+#            cat settings.json &&
+#            ./src/bin/run.sh
         imagePullPolicy: Always
         name: etherpad
         ports:
