--- a/resources/etherpad/etherpad_deployment.yaml
+++ b/resources/etherpad/etherpad_deployment.yaml
@@ -23,18 +23,18 @@ spec:
       - env:
         - name: DB_TYPE
           value: postgres
-        - name: DB_URL
-          value: 'postgresql://postgres:etherpad@database-1.cdgkeivikc1o.eu-west-1.rds.amazonaws.com:5432/etherpad?sslmode=allow'
-#        - name: DB_HOST
-#          value: ''
-#        - name: DB_PORT
-#          value: ''
-#        - name: DB_DATABASE
-#          value: ''
-#        - name: DB_USER
-#          value: ''
-#        - name: DB_PASS
-#          value: ''
+#        - name: DB_URL
+#          value: 'postgresql://postgres:etherpad@database-1.cdgkeivikc1o.eu-west-1.rds.amazonaws.com:5432/etherpad?sslmode=allow'
+        - name: DB_HOST
+          value: 'database-1.cdgkeivikc1o.eu-west-1.rds.amazonaws.com'
+        - name: DB_PORT
+          value: '5432'
+        - name: DB_DATABASE
+          value: 'etherpad?sslmode=allow'
+        - name: DB_USER
+          value: 'postgres'
+        - name: DB_PASS
+          value: 'etherpad'
         - name: NODE_ENV
           value: production
         image: etherpad/etherpad:2.3.2
