--- a/resources/etherpad/etherpad_deployment.yaml
+++ b/resources/etherpad/etherpad_deployment.yaml
@@ -24,7 +24,7 @@ spec:
         - name: DB_TYPE
           value: postgres
         - name: DB_URL
-          value: 'postgresql://postgres:etherpad@database-1.cdgkeivikc1o.eu-west-1.rds.amazonaws.com:5432/etherpad?sslmode=require'
+          value: 'postgresql://postgres:etherpad@database-1.cofryfniazvh.eu-west-1.rds.amazonaws.com:5432/etherpad?sslmode=require'
 #        - name: DB_HOST
 #          value: 'database-1.cdgkeivikc1o.eu-west-1.rds.amazonaws.com'
 #        - name: DB_PORT
@@ -38,20 +38,14 @@ spec:
         - name: NODE_ENV
           value: production
         image: etherpad/etherpad:2.3.2
-#        command: ["/bin/bash"]
-#        args:
-#          - '-c'
-#          - >-
-#            set -eux &&
-#            cp config/settings.json . &&
-#            sed -i "s|DB_TYPE|${DB_TYPE}|" settings.json &&
-#            sed -i '/DB_HOST/d' settings.json &&
-#            sed -i '/DB_PORT/d' settings.json &&
-#            sed -i '/DB_DATABASE/d' settings.json &&
-#            sed -i '/DB_USER/d' settings.json &&
-#            sed -i "s|.*DB_PASS.*| \"url\" : \"${DB_URL}\"|" settings.json &&
-#            cat settings.json &&
-#            ./src/bin/run.sh
+        command: ["/bin/bash"]
+        args:
+         - '-c'
+         - >-
+           set -eux &&
+           sed -i "s|.*DB_URL.*| \"connectionString\" : \"${DB_URL}\"|" /opt/etherpad-lite/settings.json &&
+           cat /opt/etherpad-lite/settings.json &&
+           pnpm run prod
         imagePullPolicy: Always
         name: etherpad
         ports:
