--- a/resources/etherpad/etherpad_deployment.yaml
+++ b/resources/etherpad/etherpad_deployment.yaml
@@ -33,7 +33,9 @@ spec:
         ports:
         - containerPort: 9001
           protocol: TCP
-        resources: {}
+        resources:
+          limits:
+            cpu: 2000m
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         readinessProbe:
